[project]
name = "biofkit"
version = "0.0.4"
authors = [
  { name="Zhang Yujian", email="Chouuken@outlook.com" },
]
description = "With biofkit, sequence can be easily extract from pdb. And more functions will be added."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Chou-Uken/biofkit"
Issues = "https://github.com/Chou-Uken/biofkit/issues"
