[project]
name = "biofkit"
version = "0.0.5"
authors = [
  { name="Zhang Yujian", email="Chouuken@outlook.com" },
]
description = "With biofkit you can deal with pdb file (extract sequence, atom information and so on) very easily. "
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Chou-Uken/biofkit"
Issues = "https://github.com/Chou-Uken/biofkit/issues"
